# Multi-Sensor-Time-Synchronisation-System

./: .clang-format  .clang-tidy  .gitignore  README.md
Demo/CustomisedCamera/: CMakeLists.txt  customised_camera.cpp  customised_camera.h  main_ros.cpp
Demo/Demo/: CMakeLists.txt  main_ros.cpp
Demo/MINI_demo/: CMakeLists.txt  main_ros.cpp
Demo/MiniDemo/: main_ros.cpp
Firmware/: mini_24_9_28_release.uf2
SDK/X86/include/: MvObsoleteInterfaces.h  cam_manager.h  unix.h
SDK/infinite_sense_core/X86/include/: CameraParams.h  PixelType.h  udp_manager.h
assets/: 全功能同步板快速开始.md  时间同步原理.md  核心板快速开始.md  核心板快速开始使用.md  相机购买指南.md
demo/customised_camera/: CMakeLists.txt  customised_camera.cpp  customised_camera.h  main_ros.cpp
demo/uart_demo/: CMakeLists.txt  main_ros.cpp
demo/udp_demo/: CMakeLists.txt  main_ros.cpp
demo/zmq_demo/: CMakeLists.txt  main_zmq.cpp
demo/zmq_demo/cmake/: FindZeroMQ.cmake
demo/zmq_demo/proto_msg/: CMakeLists.txt  msg_header.proto  msg_image.proto  msg_imu.proto  mvt_msg_header.proto  mvt_msg_image.proto  mvt_msg_imu.proto
firmware/: README.md  flash_board_tool.uf2  full_v2_24_10_16_release.uf2  full_v3_24_10_23_release.uf2  full_v3_24_11_16_release.uf2  full_v3_24_11_25_release.uf2  mini_24_10.16_release.uf2  mini_24_11_11_release.uf2  mini_24_11_13_release.uf2  mini_24_11_16_release.uf2  mini_24_11_25_release.uf2  mini_flash.uf2
sdk/infinite_sense_core/arm/include/: MvCameraControl.h  MvErrorDefine.h  ObsoleteCamParams.h  atomicops.h  crc.h  data_manager.h  practical_socket.h  readerwriterqueue.h  win.h
sdk/infinite_sense_core/arm/lib/: CommonParameters.ini  MvProducerGEV.cti  MvProducerU3V.cti  libopencv_core.so.4.2.0  libopencv_imgproc.so.4.2.0  libusb-1.0.so.0
sdk/infinite_sense_core/x86/include/: cam_manager.h  data_manager.h  serial.h  serial_manager.h  udp_manager.h
sdk/infinite_sense_core/x86/lib/: libopencv_core.so.4.8.0  libopencv_highgui.so.408  libopencv_imgcodecs.so.408
